tests/sumo/basic/tls/errors/invalid_state_length/errors.sumo
Error: Mismatching phase state length in tlLogic '0', program 'broken' in phases 1 and 2
Quitting (on error).
